--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12744,6 +12744,12 @@ textarea.form-control {
     border: 1px solid transparent;
 }
 
+.block-27 ul li.disabled span {
+    /* background: #fdd3d3; */
+    color: grey;
+    border: 1px solid transparent;
+}
+
 .block-8 .accordion-item .heading {
     font-size: 16px;
     font-weight: 400;
