--- a/public/css/pesanan.css
+++ b/public/css/pesanan.css
@@ -26,7 +26,7 @@ hr {
         rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 
-.heading {
+/* .heading {
     width: 100%;
     height: 40px;
     background-color: rgb(110, 121, 244);
@@ -39,7 +39,7 @@ hr {
     color: white;
     letter-spacing: 1px;
     padding-top: 5px;
-}
+} */
 
 .tiket .header {
     display: flex;
@@ -66,16 +66,16 @@ hr {
 
 .isi .isi1 .keberangkatan {
     flex-basis: 50%;
-    padding: 10px;
+    padding: 5px;
 }
 
-.isi .isi1 .tujuan {
+/* .isi .isi1 .tujuan {
     flex-basis: 40%;
     padding: 10px;
-}
+} */
 
 .isi .isi1 .harga {
-    flex-basis: 10%;
+    flex-basis: 40%;
     padding: 10px;
 }
 
