--- a/public/css/pembayaran.css
+++ b/public/css/pembayaran.css
@@ -198,6 +198,8 @@ hr {
     gap: 20px;
     max-width: 400px;
     margin: auto;
+    margin-bottom: 80px;
+    padding-bottom: 20px;
 }
 
 .isi form button.bayar {
